--- a/scss/Generales.scss
+++ b/scss/Generales.scss
@@ -60,6 +60,7 @@ h3{
 }
 h4{
     padding:10px;
+    margin:10px;
     height:50px;
     font: rgb(250, 250, 250) 18px;
     background-image:linear-gradient(to bottom right, grey, rgb(53, 51, 51)); 
